<resources>
    <string name="app_name">BookStore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TitleSearch">Từ Khóa Hot</string>
    <string name="Login">Đăng Nhập / Đăng Kí</string>
    <string name="ManagerBill">Quản Lý Đơn Hàng</string>
    <string name="btnProductBought">Sản Phẩm Đã Mua</string>
    <string name="favoriteProduct">Sản Phẩm Yêu Thích</string>
    <string name="ProductRated">Sản Phẩm Đã Đánh Giá</string>
    <string name="Setting">Cài đặt</string>
    <string name="PhoneNumber">Số Điện Thoại</string>
    <string name="PassWord">Mật Khẩu</string>
    <string name="Login_Button">Đăng Nhập</string>
    <string name="CustomerName">Họ Tên</string>
    <string name="Address">Địa Chỉ</string>
    <string name="Male">Nam</string>
    <string name="FeMale">Nữ</string>
    <string name="Register">Đăng Kí</string>
    <string name="Term">Khi đăng kí là bạn đã chấp nhận điều khoản của chúng  tôi</string>
    <string name="SpinnerTitle">Sắp Xếp</string>
    <string name="Buy">Chọn Mua</string>
    <string name="ProductKind">Sản Phẩm Cùng Loại</string>
    <string name="Pay">Đặt Hàng</string>
    <string name="NewProduct">Sản Phẩm Mới</string>
    <string name="AllProduct">Tất Cả Sản Phẩm</string>
    <string name="Logout">Đăng Xuất</string>
    <string name="rebuy">Đặt Lại Đơn Hàng</string>
    <string name="update">Update</string>
</resources>
