<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".fragment.LoginFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp">
<!--    -->
    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_Name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/CustomerName" />
</com.google.android.material.textfield.TextInputLayout>
    <!---->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/PhoneNumber" />
    </com.google.android.material.textfield.TextInputLayout>
    <!---->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/PassWord"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--    -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Address" />
    </com.google.android.material.textfield.TextInputLayout>
    <!---->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Male"
            android:checked="true"
            android:layout_marginHorizontal="20dp"/>
        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/FeMale"
            android:layout_marginHorizontal="20dp"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/Register"
        android:textColor="@color/white_color"
        android:background="@color/ReadLight"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Term"/>


</LinearLayout>
</ScrollView>