<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AccountFragment"
    android:background="@color/LightGray">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:drawableLeft="@drawable/ic_account_circle_black_46dp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:paddingLeft="10dp"
                android:text="@string/Login"
                android:background="@drawable/btn_border_bottom"/>

            <Button
                android:id="@+id/btnLogged"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:drawableLeft="@drawable/ic_account_circle_black_46dp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:text="@string/Login"
                android:background="@drawable/btn_border_bottom"/>

            <Button
                android:id="@+id/btnManagerBill"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableLeft="@drawable/ic_receipt_black_24dp"
                android:paddingLeft="20dp"
                android:text="@string/ManagerBill"
                android:background="@drawable/btn_border_bottom"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/btnProductBought"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
                android:paddingLeft="20dp"
                android:text="@string/btnProductBought"
                android:background="@drawable/btn_border_bottom"/>
            <Button
                android:id="@+id/btnFavoriteProduct"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableLeft="@drawable/ic_favorite_black_24dp"
                android:paddingLeft="20dp"
                android:text="@string/favoriteProduct"
                android:background="@drawable/btn_border_bottom"/>
            <Button
                android:id="@+id/btnRatedProduct"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableLeft="@drawable/ic_turned_in_black_24dp"
                android:paddingLeft="20dp"
                android:text="@string/ProductRated"
                android:background="@drawable/btn_border_bottom"/>

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingLeft="20dp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableLeft="@drawable/ic_settings_black_24dp"
                android:text="@string/Setting"
                android:background="@drawable/btn_border_bottom"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:paddingLeft="20dp"
                android:text="@string/Logout"
                android:background="@drawable/btn_gradient_style"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>