<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_design_support_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:background="@color/Light"
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="60dp">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/home_appbar"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/toolbar_gradient_style"
                    app:layout_scrollFlags="exitUntilCollapsed|scroll">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        app:layout_collapseMode="parallax"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="10">
                            <TextView
                                android:layout_weight="8"
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="35dp"
                                android:layout_marginLeft="25dp"
                                android:text="@string/app_name"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                            <ImageView
                                android:id="@+id/btn_cart"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_marginTop="20dp"
                                android:layout_gravity="center_vertical"
                                android:layout_height="25dp"
                                android:src="@drawable/ic_local_grocery_store_white_24dp" />
                        </LinearLayout>
                    </androidx.appcompat.widget.Toolbar>
                    <EditText
                        android:id="@+id/edt_Search"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:layout_height="40dp"
                        android:hint="Search Here"
                        android:textColorHint="@color/black_color"
                        android:textColor="@color/black_color"
                        android:layout_marginTop="70dp"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_search_black_24dp"
                        android:background="@drawable/edt_radius_white"/>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_Scroll_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--                <RelativeLayout-->
                    <!--                    xmlns:android="http://schemas.android.com/apk/res/android"-->
                    <!--                    xmlns:app="http://schemas.android.com/apk/res-auto"-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="100dp"-->
                    <!--                    android:layout_marginTop="5dp"-->
                    <!--                    android:layout_marginHorizontal="0dp"-->
                    <!--                    android:background="@drawable/slider_radius">-->
                    <!--                    <android.support.v4.view.ViewPager-->
                    <!--                        android:id="@+id/slider_viewpager"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="match_parent" />-->

                    <!--                    <android.support.design.widget.TabLayout-->
                    <!--                        android:id="@+id/tab_slider"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_centerHorizontal="true"-->
                    <!--                        android:layout_alignParentBottom="true"-->
                    <!--                        android:layout_marginBottom="10dp"-->
                    <!--                        app:layout_constraintHorizontal_bias="0.0">-->

                    <!--                    </android.support.design.widget.TabLayout>-->
                    <!--                </RelativeLayout>-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Danh Mục"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black_color"/>
                    <RelativeLayout
                        android:background="@drawable/slider_radius"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_category_home"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:listitem="@layout/category_item"
                            android:orientation="horizontal"
                            app:reverseLayout="false"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:background="@color/Light"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NewProduct"
                            android:layout_marginLeft="10dp"
                            android:textStyle="bold"
                            android:textColor="@color/black_color"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginTop="25dp"
                            android:id="@+id/list_product_hot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:listitem="@layout/product_cardview_item"
                            android:orientation="horizontal"
                            app:reverseLayout="false"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            />
                    </RelativeLayout>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AllProduct"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black_color"/>
                    <RelativeLayout
                        android:background="@color/white_color"
                        android:padding="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_product"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:listitem="@layout/product_item"
                            android:orientation="horizontal"
                            app:reverseLayout="false"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            />
                    </RelativeLayout>
                    <TextView
                        android:background="@color/Light"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bạn đã xem hết danh sách sản phẩm"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black_color"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>